--- a/locale/en_US/LC_MESSAGES/messages.po
+++ b/locale/en_US/LC_MESSAGES/messages.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: 1.2.1\n"
 "Report-Msgid-Bugs-To: Bill Zimmerman <billzimmerman@gmail.com>\n"
 "POT-Creation-Date: 2017-10-19 08:56+0000\n"
-"PO-Revision-Date: 2021-08-04 00:35+0000\n"
+"PO-Revision-Date: 2022-01-05 20:35+0000\n"
 "Last-Translator: Bill Zimmerman <billzimmerman@gmail.com>\n"
 "Language-Team: \n"
 "Language: en_US\n"
@@ -486,8 +486,8 @@ msgstr "Security type"
 msgid "Encryption Type"
 msgstr "Encryption Type"
 
-msgid "PSK"
-msgstr "PSK"
+msgid "Pre-shared key (PSK)"
+msgstr "Pre-shared key (PSK)"
 
 msgid "Advanced settings"
 msgstr "Advanced settings"
@@ -584,6 +584,24 @@ msgstr "Sets the <code>txpower</code> option for the AP interface and the config
 
 msgid "dBm is a unit of level used to indicate that a power ratio is expressed in decibels (dB) with reference to one milliwatt (mW). 30 dBm is equal to 1000 mW, while 0 dBm equals 1.25 mW."
 msgstr "dBm is a unit of level used to indicate that a power ratio is expressed in decibels (dB) with reference to one milliwatt (mW). 30 dBm is equal to 1000 mW, while 0 dBm equals 1.25 mW."
+
+msgid "WPA and WPA2"
+msgstr "WPA and WPA2"
+
+msgid "WPA2 and WPA3-Personal (transitional mode)"
+msgstr "WPA2 and WPA3-Personal (transitional mode)"
+
+msgid "WPA3-Personal (required)"
+msgstr "WPA3-Personal (required)"
+
+msgid "Enabled (for supported clients)"
+msgstr "Enabled (for supported clients)"
+
+msgid "Required (for supported clients)"
+msgstr "Required (for supported clients)"
+
+msgid "802.11w extends strong cryptographic protection to a select set of robust management frames, including Deauthentication, Disassociation and certain categories of Action Management frames. Collectively, this is known as Management Frame Protection (MFP)."
+msgstr "802.11w extends strong cryptographic protection to a select set of robust management frames, including Deauthentication, Disassociation and certain categories of Action Management frames. Collectively, this is known as Management Frame Protection (MFP)."
 
 #: includes/networking.php
 msgid "Summary"
@@ -1210,4 +1228,3 @@ msgstr "Enable Firewall"
 
 msgid "Apply changes"
 msgstr "Apply changes"
-:
